

Thu August 19 2010 -- version 1.28
----------------------------------

- Removed some old documentation and added new.
- Allow for project server scheduler unlimited run time.
- Limited the number of work request a resource can do.
- Made index UNIQUE in running_locks.
- Made sure interfaces job list requests do sort the jobs on 
  state_time_stamp by using the available index, even when the
  table is small and the MySQL optimizer likes to ignore the
  indexs we made.
- Made sure that for the basic_interface the SID (to counter
  XSS attacks) is not reset each time index.php is hit.


Fri November 19 2010 -- version 1.29
------------------------------------

- Patched Ssl.inc to work with newer PHP 5.x (patch of Willem v.
  Engen).
- Added 'cd' trick to some tool scripts so they can be run from 
  any other directory.
- Added extra logging to stderr option for qstat tool.
- Made sure that for CLI tools arguments are numeric if needed.
- Added job count feature to request work for resources for future
  pilot job frameworks.
- Removed small update bug for master-slave servers.
- Added slave server capabilities report into daemon.


Fri January 7 2011 -- version 1.30
----------------------------------

- Patched repository content listing code. It had a security hole 
  found by Willem v. Engen.
- Removed some dead code in interface job state API.
- Added support for retreiving job count in interface API.
- Added support for specifying owners allowed or denied for 
  resources in resource request work API.
- Removed small bug generating php error messages in Utils.inc.
- Added support for reporting allowed and denied owners in daemon
  when requesting work.
- Added SIGHUP support in daemon for restarting logger.
- Made sure server updates use keep alives and caching in posting.
- Added support for relative paths in daemon config file, thanks
  to Willem v. Engen.
- Added the .spec files in specs to build RPMs on RHEL systems.
