@@ -4,7 +4,7 @@ HostnameLookups off
 Timeout 15
 KeepAlive On
 KeepAliveTimeout 1
-MaxKeepAliveRequests 100
+MaxKeepAliveRequests 512
 
 <Directory />
        Options FollowSymLinks
@@ -15,7 +15,7 @@ MaxKeepAliveRequests 100
 	AllowOverride All
 </Directory>
 
-<Directory "/var/www/html/LGI/repository/JOB_*">
+<Directory "/var/www/html/LGI/repository/*/JOB_*">
 	AllowOverride None
         Options -ExecCGI
         php_flag engine off
